2016-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS, doc/texinfo.texi (Conditional Commands) <@errormsg>: 
	Update to reflect fact that @-commands inside @errormsg is no 
	longer supported.
	* NEWS: Move a news item to the right place.

2016-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@errormsg, @U>: Don't use
	Texinfo::Convert::Text::convert to get argument, because the 
	dependence on Texinfo::Convert::Text is a significant 
	complication.
	(top level): Remove "use Texinfo::Convert::Text" directive.
	(%default_valid_nestings): Don't allow anything inside @errormsg 
	or @U.
	(__): Remove commented-out definition of '__' sub.
	(parser): Remove commented-out loop printing values.

2016-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm: Add "use" directive for 
	Texinfo::Convert::NodeNameNormalization instead of relying on 
	this module being pulled in indirectly.

2016-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm: Remove comment referring to 
	'raw_formats_stack'.
	(_parse_texi): Add debugging statement if the condition in an 
	inline command is missing.

2016-06-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi, _register_global_command)
	(_register_label, _enter_index_entry, _end_line)
	(_parse_line_command_args, _parse_special_misc_commands): Remove 
	uses of _ignore_global_commands.  Remove some commented-out 
	lines of code.
	(parser, simple_parser): Remove reference to 
	$self->{'expanded_formats_stack'}.
	(_ignore_global_commands): Removed.

2016-06-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): For raw block commands 
	(like @tex) and raw inline commands (@inlinefmt), skip over the 
	part of the conditional that isn't expanded, instead of parsing 
	it as usual and using a stack of expanded conditionals.  Add a 
	dummy argument to the parse tree for the skipped-over argument.